# gem-index-filter

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  RELEASING.md  WEBHOOK_SERVER.md  rubygems-allow.txt
src/: filter.rs  lib.rs  main.rs  parser.rs  server.rs
tests/: integration.rs
