[package]
name = "gem-index-filter"
version = "0.1.0"
edition = "2021"
description = "Fast streaming filter for RubyGems versions index files"
license = "MIT"
repository = "https://github.com/gem-coop/gem-index-filter"
homepage = "https://github.com/gem-coop/gem-index-filter"
readme = "README.md"
keywords = ["rubygems", "compact_index", "bundler", "filter", "streaming"]
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
rustc-hash = "2.0"
sha2 = "0.10"
hex = "0.4"

# Optional dependencies for webhook server
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
aws-config = { version = "1.0", optional = true }
aws-sdk-s3 = { version = "1.0", optional = true }
reqwest = { version = "0.11", optional = true }
chrono = { version = "0.4", optional = true }
base64 = { version = "0.22", optional = true }

[[bin]]
name = "gem-index-filter"
path = "src/main.rs"

[[bin]]
name = "webhook-server"
path = "src/bin/webhook-server.rs"
required-features = ["server"]

[features]
server = ["axum", "tokio", "serde", "serde_json", "aws-config", "aws-sdk-s3", "reqwest", "chrono", "base64"]

[dev-dependencies]
